@@ -312,14 +312,14 @@ class IListControl(IControl):
         required=True)
 
     displayOptions = zope.schema.List(
-        # TODO: currently only implemented for select by ClientForm
+        # TODO: currently only implemented for select by mechanize
         title=u"Options",
         description=u"""\
         A list of possible display values for the control.""",
         required=True)
 
     displayValue = zope.schema.Field(
-        # TODO: currently only implemented for select by ClientForm
+        # TODO: currently only implemented for select by mechanize
         title=u"Value",
         description=u"The value of the control, as rendered by the display",
         default=None,
